--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AppMovil",
+  "name": "Buildify",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -27,6 +27,7 @@
     "@capacitor/android": "^6.1.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.1.0",
+    "@capacitor/geolocation": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/preferences": "^6.0.1",
